feat: implemented protocol
find protocol in external service and implemented wiremock in acceptance test